--- a/style.css
+++ b/style.css
@@ -44,22 +44,39 @@ main span {
   margin-left: 192px;
 }
 
-.card button {
+.card section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+
   width: 138px;
   height: 152px;
   background: #e1e1e6;
   border-radius: 24px;
   border: none;
+}
+
+.card section button {
+  width: 120px;
+  height: 80px;
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+}
+
+.card section input {
+  width: 100px;
   cursor: pointer;
 }
 
 /* CARD ACTIVE */
 
-.card button.active {
+.card section.active {
   background: #02799d;
 }
 
-.card button.active svg path {
+.card section.active svg path {
   fill: white;
 }
 
